--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -20,3 +20,9 @@ button {
     color: #FFB8FF;
     background-attachment: grey;
 }
+
+.menuButton:disabled {
+    color: grey;
+    background: transparent;
+    border-color: grey;
+}
